--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="content-section">
-                <h2>Turkish</h2>
+                <h2>Türkçe</h2>
                 <p>Ladino Data Hub, Sefarad kültürü ve Ladino dili hakkındaki mevcut verileri tek bir erişim noktasında merkezileştirmek için oluşturuldu. Ladino Data Hub, Ladino dili ve Sefarad kültürü ile ilgili her türlü veri setini (ses, metin, yapılandırılmış, yapılandırılmamış, paralel) görünür kılar. Ladino Data Hub'a katkıda bulunmak istiyorsanız lütfen Col·lectivaT (info@collectivat.cat) veya Sefarad Kültür ve Araştırma Derneği (sephardiccenter@gmail.com) ile iletişime geçin.</p>
                 
                 <p>‟Judeoespanyol: Akdeniz'in iki yakasını birleştiren dilˮ projesi T.C. Kültür ve Turizm Bakanlığı tarafından Avrupa Birliği’nin mali desteği ile hayata geçirilen “Ortak Kültür Mirası: Türkiye ve AB Arasında Koruma ve Diyalog-II (CCH-II) Hibe Programı” kapsamında hibe desteği almıştır. Programın Sözleşme Makamı, Merkezi Finans ve İhale Birimidir. “Ortak Kültür Mirası: Türkiye ve AB Arasında Koruma ve Diyalog-II (CCH-II) Hibe Programı”, Türk ve AB kuruluşları arasında ortaklaşa uygulanan ortak kültürel miras faaliyetlerinin teşvik edilmesini ve geliştirilmesini amaçlamaktadır. Bu hibe programının genel hedefi, kültür, sanat ve kültürel miras yoluyla sivil toplum diyaloğunun, kültürel miras konusunda uluslararası işbirliğinin geliştirilmesi ve Türkiye'de kültürel değerlerin teşvik edilmesidir.</p>
