Update TTS dataset and model descriptions in HTML

--- a/index.html
+++ b/index.html
@@ -102,12 +102,21 @@
                     </div>
                 </a>
 
-                <!-- Text-to-speech (TTS) training dataset and models -->
-                <a href="https://huggingface.co/collections/collectivat" class="dataset-card" target="_blank">
+                <!-- Text-to-speech (TTS) training dataset-->
+                <a href="https://huggingface.co/datasets/collectivat/ladino-karen-TTS" class="dataset-card" target="_blank">
                     <img src="imgs/tts.jpg" alt="Text-to-speech TTS" class="dataset-image">
                     <div class="dataset-content">
-                        <h2 class="dataset-title">Text-to-speech (TTS) training dataset and models</h2>
-                        <p class="dataset-description">Training dataset used in building Ladino text-to-speech model and model. Voice artist: Karen Şarhon. </p>
+                        <h2 class="dataset-title">Text-to-speech (TTS) training dataset</h2>
+                        <p class="dataset-description">Training dataset used in building Ladino text-to-speech. </p>
+                    </div>
+                </a>
+
+                <!-- Text-to-speech (TTS) models -->
+                <a href="https://huggingface.co/collectivat/ladino-ttst" class="dataset-card" target="_blank">
+                    <img src="imgs/tts.jpg" alt="Text-to-speech TTS" class="dataset-image">
+                    <div class="dataset-content">
+                        <h2 class="dataset-title">Text-to-speech (TTS) models</h2>
+                        <p class="dataset-description">Ladino text-to-speech models.</p>
                     </div>
                 </a>
             </div>
