Fix dataset links and update author name spelling
Updated links and corrected the spelling of 'Şarhon' in the dataset description.

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 </a>
 
                 <!-- Ladino speech corpus -->
-                <a href="https://huggingface.co/collections/collectivat" class="dataset-card" target="_blank">
+                <a href="https://p8b0.c14.e2-4.dev/dataset-share-fr/ladino_multispeaker_speech_corpus.zip" class="dataset-card" target="_blank">
                     <img src="imgs/ladino_speech_corpus.png" alt="Ladino speech corpus" class="dataset-image">
                     <div class="dataset-content">
                         <h2 class="dataset-title">Ladino speech corpus</h2>
-                        <p class="dataset-description">Ladino speech corpus contains transcripted recordings of some of the last remaining Ladino speakers of Istanbul. Corpus is created by Karen Sarhon of SKAD.</p>
+                        <p class="dataset-description">Ladino speech corpus contains transcripted recordings of some of the last remaining Ladino speakers of Istanbul. Corpus is created by Karen Şarhon of SKAD.</p>
                     </div>
                 </a>
 
@@ -94,7 +94,7 @@
                 </div>
 
                 <!-- Neural machine translation models -->
-                <a href="https://huggingface.co/collections/collectivat" class="dataset-card" target="_blank">
+                <a href="https://huggingface.co/collectivat/ladino-MT-models" class="dataset-card" target="_blank">
                     <img src="imgs/MachineTranslation-1800x1800.avif" alt="Neural machine translation" class="dataset-image">
                     <div class="dataset-content">
                         <h2 class="dataset-title">Neural machine translation models</h2>
